# dataspark

./: .env.example  .gitignore  PUBLISHING.md  README.md  core.py  explorer.py  profiles.py  pyproject.toml  test_profiles.py
dataspark/: __init__.py  cli.py  prompts.py
tests/: test_core.py  test_explorer.py  test_prompts.py
