[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataspark-ai"
version = "0.1.0"
description = "AI-powered data science co-pilot using Claude — explore data, design projects, generate code, and brainstorm from anywhere Python runs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Karen Morton", email = "ktg.insights@gmail.com" },
]
keywords = [
    "data-science",
    "ai",
    "claude",
    "machine-learning",
    "eda",
    "copilot",
    "llm",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "anthropic>=0.39.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
full = [
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "scipy>=1.10.0",
    "openpyxl>=3.0.0",
    "statsmodels>=0.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
dataspark = "dataspark.cli:main"

[project.urls]
Homepage = "https://github.com/KTG0409/dataspark"
Documentation = "https://github.com/KTG0409/dataspark#readme"
Repository = "https://github.com/KTG0409/dataspark"
Issues = "https://github.com/KTG0409/dataspark/issues"

[tool.hatch.build.targets.wheel]
packages = ["dataspark"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
